we still have data loading getting stuck